@@ -1,3 +1,12 @@
+2008-01-17  Noel O'Boyle <baoilleach@gmail.com>
+
+	* scripts/python/pybel.py, scripts/python/examples/testpybel.py:
+	Updated to use plugin descriptors. Changed to create a single instance
+	of plugin descriptors and fingerprinters. Also, readfile now raises an
+	IOError if the file does not exist.
+	* scripts/python/examples/findcoverage.bat: Add .bat file to automate
+	calculation of code coverage for pybel.
+
 2008-01-16 Chris Morley
 
 	* include/openbabel/obconversion.h(ReadObject),
